<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginItem"
            type="com.iyuba.toelflistening.bean.LoginBean" />
    </data>

    <LinearLayout
        android:id="@+id/login_ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/standard_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_login"
            style="@style/Widget.Magic.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_some"
            app:startIconDrawable="@drawable/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={loginItem.username}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_login"
            style="@style/Widget.Magic.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={loginItem.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_interval">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/middle_line"
                android:layout_marginEnd="@dimen/standard_interval"
                android:text="@string/forgot_password"
                android:textColor="@color/purple_500" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/middle_line"
                android:layout_marginStart="@dimen/standard_interval"
                android:text="@string/register"
                android:textColor="@color/purple_500" />

            <TextView
                android:id="@+id/middle_line"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/purple_500" />
        </RelativeLayout>
    </LinearLayout>
</layout>