<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registerBean"
            type="com.iyuba.toelflistening.bean.RegisterBean" />
        <variable
            name="loginBean"
            type="com.iyuba.toelflistening.bean.LoginBean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/standard_title"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_input_register"
            style="@style/Widget.Magic.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone"
            app:startIconDrawable="@drawable/phone">
        <com.google.android.material.textfield.TextInputEditText
            android:text="@={registerBean.phone}"
            android:inputType="numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:background="@color/text_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_code"
                style="@style/Widget.Magic.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/input_verify_code"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/verify_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={registerBean.verifyCode}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_verify_code"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_register"
            style="@style/Widget.Magic.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            app:startIconDrawable="@drawable/user">
            <com.google.android.material.textfield.TextInputEditText
                android:text="@={loginBean.username}"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_register"
            style="@style/Widget.Magic.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:startIconDrawable="@drawable/lock"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:text="@={loginBean.password}"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:checked="@={registerBean.check}"
                android:layout_marginStart="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/read_agree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_bt"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>
</layout>