<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.iyuba.toelflistening.bean.LoginResponse" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/standard_interval">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_size"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/vip_circle"
                    android:visibility="@{item.isVip() ? View.VISIBLE : View.GONE}" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/head"
                    loadUrl="@{item.imgSrc}"
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp" />

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignEnd="@id/head"
                    android:layout_alignBottom="@id/head"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/vip_head"
                    android:visibility="@{item.isVip() ? View.VISIBLE : View.GONE}" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@{item.username}"
                android:textSize="@dimen/standard_text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_in"
                app:drawableStartCompat="@drawable/sign_in" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/setting_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/setting_item" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:textColor="@android:color/white" />
    </LinearLayout>

</layout>